[package]
name = "momostyle"
version = "0.1.0"
authors = ["hrm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.21.3"
imageproc = "0.18.0"
#x11-screenshot = "*"
#x11-screenshot = "0.2.0"
scrap = "*"
minifb = "0.12"
hsl = "0.1.1"
rayon = "*"
